Fixed inconsistent column width in timeline when title is too short

--- a/src/css/sozi.editor.view.Timeline.css
+++ b/src/css/sozi.editor.view.Timeline.css
@@ -85,6 +85,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: 8rem;
+    min-width: 3rem;
     max-width: 8rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
